WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
80724
Fix uninitialized variable in DynamicsCompressor
https://bugs.webkit.org/show_bug.cgi?id=80724
Summary
Fix uninitialized variable in DynamicsCompressor
Chris Rogers
Reported
2012-03-09 13:11:58 PST
Fix uninitialized variable in DynamicsCompressor
Attachments
Patch
(1.32 KB, patch)
2012-03-09 13:13 PST
,
Chris Rogers
jamesr
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Rogers
Comment 1
2012-03-09 13:13:14 PST
Created
attachment 131089
[details]
Patch
Chris Rogers
Comment 2
2012-03-09 13:14:20 PST
m_sampleRate is no longer initialized after:
http://trac.webkit.org/changeset/108538/trunk/Source/WebCore/platform/audio/DynamicsCompressor.cpp
Chris Rogers
Comment 3
2012-03-09 14:24:30 PST
Committed
r110330
: <
http://trac.webkit.org/changeset/110330
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug