Fix uninitialized variable in DynamicsCompressor https://bugs.webkit.org/show_bug.cgi?id=80724

Reviewed by James Robinson.

* platform/audio/DynamicsCompressor.cpp:
(WebCore::DynamicsCompressor::DynamicsCompressor):

git-svn-id: svn://svn.chromium.org/blink/trunk@110330 bbb929c8-8fbe-4397-9dbb-9b2b20218538