third_party/WebKit/Source/WebCore/platform/audio/DynamicsCompressor.cpp
@@ -43,6 +43,7 @@ using namespace AudioUtilities;
     
 DynamicsCompressor::DynamicsCompressor(float sampleRate, unsigned numberOfChannels)
     : m_numberOfChannels(numberOfChannels)
+    , m_sampleRate(sampleRate)
     , m_compressor(sampleRate, numberOfChannels)
 {
     // Uninitialized state - for parameter recalculation.
